refactoring for opensearch

--- a/src/main/assemblies/plugin.xml
+++ b/src/main/assemblies/plugin.xml
@@ -11,7 +11,7 @@
             <useProjectArtifact>true</useProjectArtifact>
             <useTransitiveFiltering>true</useTransitiveFiltering>
             <excludes>
-                <exclude>org.elasticsearch:elasticsearch</exclude>
+                <exclude>org.opensearch:opensearch</exclude>
                 <exclude>org.apache.lucene:lucene-core</exclude>
                 <exclude>log4j:log4j</exclude>
             </excludes>
