--- a/pom.xml
+++ b/pom.xml
@@ -1,59 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<name>elasticsearch-analysis-greeklish</name>
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>gr.skroutz</groupId>
-	<artifactId>elasticsearch-analysis-greeklish</artifactId>
-	<version>7.7.0.3-SNAPSHOT</version>
-	<packaging>jar</packaging>
-	<description>Greeklish converter for ElasticSearch</description>
-	<inceptionYear>2012</inceptionYear>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <name>opensearh-analysis-greeklish</name>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>gr.spyrosmoux</groupId>
+  <artifactId>opensearch-analysis-greeklish</artifactId>
+  <version>2.8.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
+  <description>Greeklish converter for OpenSearch</description>
+  <inceptionYear>2023</inceptionYear>
 
-	<licenses>
-		<license>
-			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<elasticsearch.version>7.7.0</elasticsearch.version>
-		<lucene.version>8.5.1</lucene.version>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <opensearch.version>2.8.0</opensearch.version>
+    <lucene.version>8.5.1</lucene.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 
-	<developers>
-	   <developer>
-	       <id>stathopa</id>
-	       <name>Tasos Stathopoulos</name>
-	       <email>stathopa@skroutz.gr</email>
-	       <organization>Skroutz S.A.</organization>
-	       <organizationUrl>http://www.skroutz.gr</organizationUrl>
-	       <roles>
-	           <role>developer</role>
-	       </roles>
-	   </developer>
-	   <developer>
-		   <id>ptheof</id>
-		   <name>Panagiotis Theofilopoulos</name>
-		   <email>p.theofilopoulos@skroutz.gr</email>
-		   <organization>Skroutz S.A.</organization>
-		   <organizationUrl>http://www.skroutz.gr</organizationUrl>
-		   <roles>
-			   <role>developer</role>
-		   </roles>
-	   </developer>
-	</developers>
+  <developers>
+    <developer>
+      <id>stathopa</id>
+      <name>Tasos Stathopoulos</name>
+      <email>stathopa@skroutz.gr</email>
+      <organization>Skroutz S.A.</organization>
+      <organizationUrl>http://www.skroutz.gr</organizationUrl>
+      <roles>
+        <role>developer</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>ptheof</id>
+      <name>Panagiotis Theofilopoulos</name>
+      <email>p.theofilopoulos@skroutz.gr</email>
+      <organization>Skroutz S.A.</organization>
+      <organizationUrl>http://www.skroutz.gr</organizationUrl>
+      <roles>
+        <role>developer</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>spyrosmoux</id>
+      <name>Spyros Mouchlianitis</name>
+      <email>spirosgsaaa@gmail.com</email>
+      <organization>SpyrosMoux</organization>
+      <organizationUrl>https://github.com/spyrosmoux</organizationUrl>
+      <roles>
+        <role>developer</role>
+      </roles>
+    </developer>
+  </developers>
 
-	<scm>
-		<connection>scm:git:git@github.com:skroutz/elasticsearch-analysis-greeklish.git</connection>
-		<developerConnection>scm:git:git@github.com:skroutz/elasticsearch-analysis-greeklish.git
-        </developerConnection>
-		<url>http://github.com/skroutz/elasticsearch-analysis-greeklish</url>
-	</scm>
+  <scm>
+    <connection>scm:git:git@github.com:spyrosmoux/opensearch-analysis-greeklish.git</connection>
+    <developerConnection>scm:git:git@github.com:spyrosmoux/opensearch-analysis-greeklish.git
+    </developerConnection>
+    <url>http://github.com/spyrosmoux/opensearch-analysis-greeklish</url>
+  </scm>
 
   <distributionManagement>
     <snapshotRepository>
@@ -62,68 +73,67 @@
     </snapshotRepository>
   </distributionManagement>
 
-	<parent>
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>7</version>
-	</parent>
+  <parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
+  </parent>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch</artifactId>
-			<version>${elasticsearch.version}</version>
-			<scope>compile</scope>
-		</dependency>
+  <dependencies>
+    <dependency>
+      <groupId>org.opensearch</groupId>
+      <artifactId>opensearch</artifactId>
+      <version>${opensearch.version}</version>
+      <scope>compile</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-core</artifactId>
-			<version>${lucene.version}</version>
-			<scope>compile</scope>
-		</dependency>
+    <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-core</artifactId>
+      <version>${lucene.version}</version>
+    </dependency>
 
-		<dependency>
-			<groupId>org.elasticsearch.test</groupId>
-			<artifactId>framework</artifactId>
-			<version>${elasticsearch.version}</version>
-			<scope>test</scope>
-		</dependency>
+    <dependency>
+      <groupId>org.opensearch.test</groupId>
+      <artifactId>framework</artifactId>
+      <version>${opensearch.version}</version>
+      <scope>test</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.1</version>
-		</dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.1</version>
+    </dependency>
 
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
-			<version>2.17.0</version>
-			<scope>compile</scope>
-		</dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.22.0</version>
+      <scope>compile</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>2.17.0</version>
-			<scope>test</scope>
-		</dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.22.0</version>
+      <scope>test</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>6.8.8</version>
-			<scope>test</scope>
-		</dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.8.0</version>
+      <scope>test</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest</artifactId>
-			<version>2.1</version>
-			<scope>compile</scope>
-		</dependency>
-	</dependencies>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest</artifactId>
+      <version>2.1</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 
   <build>
     <resources>
@@ -166,7 +176,6 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.11</version>
         <configuration>
-          <encoding>UTF-8</encoding>
           <forkMode>once</forkMode>
           <includes>
             <include>**/*Test.java</include>
