--- a/src/main/resources/plugin-descriptor.properties
+++ b/src/main/resources/plugin-descriptor.properties
@@ -2,5 +2,5 @@ name=${project.name}
 description=${project.description}
 version=${project.version}
 java.version=${maven.compiler.target}
-elasticsearch.version=${elasticsearch.version}
-classname=org.elasticsearch.plugin.analysis.greeklish.GreeklishPlugin
+opensearch.version=${opensearch.version}
+classname=org.opensearch.plugin.analysis.greeklish.GreeklishPlugin
