--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <name>opensearh-analysis-greeklish</name>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>gr.spyrosmoux</groupId>
+  <groupId>io.github.spyrosmoux</groupId>
   <artifactId>opensearch-analysis-greeklish</artifactId>
   <version>2.8.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -61,9 +61,8 @@
 
   <scm>
     <connection>scm:git:git@github.com:spyrosmoux/opensearch-analysis-greeklish.git</connection>
-    <developerConnection>scm:git:git@github.com:spyrosmoux/opensearch-analysis-greeklish.git
-    </developerConnection>
-    <url>http://github.com/spyrosmoux/opensearch-analysis-greeklish</url>
+    <developerConnection>scm:git:git@github.com:spyrosmoux/opensearch-analysis-greeklish.git</developerConnection>
+    <url>https://github.com/spyrosmoux/opensearch-analysis-greeklish</url>
   </scm>
 
   <distributionManagement>
