--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.spyrosmoux</groupId>
   <artifactId>opensearch-analysis-greeklish</artifactId>
-  <version>2.8.0.1</version>
+  <version>2.8.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>Greeklish converter for OpenSearch</description>
   <inceptionYear>2023</inceptionYear>
